plugins {
    id 'java'
}

group = 'net.leibi'
version = '0.0.1-SNAPSHOT'
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'com.google.guava:guava:31.1-jre'
    compileOnly    'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'

    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.23.1'


    testImplementation("org.junit.jupiter:junit-jupiter-api:6.0.1")
    testImplementation("org.assertj:assertj-core:3.27.6")
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:6.0.1'
    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.1'




}

test {
    useJUnitPlatform()
    minHeapSize = "8g"
    maxHeapSize = "64g"
    jvmArgs(['--enable-preview'])
}


tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}
